[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "intel-harvester"
version = "2.0.0"
description = "Free OSINT domain intelligence tool. Extract emails, names, titles, phones, social profiles & Google Ads intelligence from any domain."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "It All Started With A Idea"},
]
keywords = [
    "osint", "email-harvester", "domain-intelligence", "contact-scraper",
    "lead-generation", "email-finder", "smtp-verification", "ads-transparency",
    "web-scraper", "reconnaissance", "security-tools", "competitive-intelligence",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
full = [
    "dnspython>=2.4.0",
    "tldextract>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/itallstartedwithaidea/intel-harvester"
Documentation = "https://github.com/itallstartedwithaidea/intel-harvester/wiki"
Repository = "https://github.com/itallstartedwithaidea/intel-harvester"
Issues = "https://github.com/itallstartedwithaidea/intel-harvester/issues"
Changelog = "https://github.com/itallstartedwithaidea/intel-harvester/blob/main/CHANGELOG.md"
